--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App backend nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "Leonardo Domingos Patricio",
