--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "app-backend-nodejs",
+  "name": "nodejs",
   "version": "1.0.0",
-  "description": "App backend nodejs",
-  "main": "index.js",
+  "description": "aplicativo backend em nodejs",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start":"nodemon app.js"
   },
-  "keywords": [],
+  "keywords": [
+    "#nodejs",
+    "#express",
+    "#",
+    "javascript"
+  ],
   "author": "Leonardo Domingos Patricio",
   "license": "ISC",
   "dependencies": {
